--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 // 将设置放入此文件中以覆盖默认值和用户设置。
 {
+    "files.autoSave": "off",
+    "workbench.sideBar.location": "left",
+    "workbench.statusBar.visible": true,
+    "editor.tabSize": 2,
+    "files.eol": "\n"
 }
