--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "extends": "eslint-config-airbnb",
     "rules": {
         "no-console": 0,
-        "eol-last": 0
+        "eol-last": 0,
+        "no-var": 0
     },
     "installedESLint": true,
     "plugins": [
@@ -16,9 +17,7 @@
     "globals": {
         "React": true
     },
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        }
+    "ecmaFeatures": {
+        "jsx": true
     }
 }
