--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "code specification study",
   "main": "",
-  "scripts": {},
+  "scripts": {
+    "build:es6": "babel src -d assets"
+  },
   "keywords": [
     "css specification",
     "javascript specification"
@@ -11,15 +13,16 @@
   "author": "jjpan",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-3": "^6.17.0",
+    "babelify": "^7.3.0",
     "eslint": "^3.9.1",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.6.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-3": "^6.17.0",
-    "babelify": "^7.3.0"
+    "eslint-plugin-react": "^6.6.0"
   },
   "dependencies": {
     "react": "^15.3.2",
