--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
     "rules": {
         "no-console": 0,
         "eol-last": 0,
-        "no-var": 0
+        "no-var": 0,
+        "prefer-arrow-callback": 0
     },
     "installedESLint": true,
     "plugins": [
